# Operating-systems-AGH-labs

./: README.md
lab01/zad1/: Makefile  prog1.c  prog4.c
lab01/zad2/: core_dumped.c  fibonacci.c  loop.c
lab01/zad3a/: Makefile  input.txt  main
lab01/zad3b/: prog2.c  prog3.c  wyniki.txt
lab01/zad3c/: matrixes.h
lab01/zad3d/: Makefile  README  config.h  config.h.in  config.status  configure  configure.ac
lab01/zad3d/autom4te.cache/: output.1  requests  traces.0  traces.1
lab01/zad3d/src/: Makefile  Makefile.am  Makefile.in  main.c  matrixes.c  matrixes.h
lab01/zad3d/src/.deps/: main.Po  matrixes.Po
lab02/zad1/: configure.ac  create.bash  whole_procedure.bash
lab02/zad1/src/: Makefile.am  bst.c  bst.h  list.c  list.h  mem_management.c  mem_management.h
lab02/zad2/: clean.bash  configure.ac  whole_procedure.bash
lab02/zad2/src/: Makefile.am  matrixes.c  matrixes.h
lab02/zad3/: Makefile  input.matrix  stat.c  stat.h  test_matrixes.c  test_mem_management.c
lab03/zad1/: Makefile  prog.c  results.txt  test.sh  wnioski.txt
lab03/zad2a/: Makefile  main.c
lab03/zad2b/: Makefile  dir_search.c  dir_search.h  main.c
lab03/zad3/: Makefile  main.c  secure.c  secure.h  testfile
lab04/zad1/: Makefile  child_parent.c  child_parent.h  main.c  processes.h  processes_clone_as_fork.c  processes_clone_as_vfork.c  processes_fork.c  processes_vfork.c  test.sh  wyniki.odt
lab04/zad2/: Makefile  append.c  archivize.c  testfile
lab04/zad3/: Makefile  count.c
lab04/zad4/: strace_1_clone_as_fork.result  strace_1_clone_as_vfork.result  strace_1_fork.result  strace_1_vfork.result  strace_2_append.result  strace_2_archivize.result  strace_3.result
lab05/zad1/: Makefile  sigaction.c  signal.c
lab05/zad2/: Makefile  receiver.c  sender.c
lab05/zad3a/: Makefile  child.c  parent.c
lab05/zad3b/: child.c  parent.c
lab05/zad3c/: Makefile  child.c  parent.c
lab06/zad1/: Makefile  main  main.c  output.txt  result.txt
lab06/zad2/: Makefile  client  client.c  out.txt  server  server.c
lab06/zad3/: Makefile  main  main.c
lab07/zad1a/: Makefile  client.c  config_header.h  server.c
lab07/zad1b/: Makefile  client.c  server.c
lab07/zad2a/: Makefile  client.c  server.c
lab07/zad2b/: Makefile  client.c  header.h  server.c
lab07/zad2c/: client.c  server.c
lab08/zad1/: Makefile  consumer.c  header.h  producer.c  runner.c
lab08/zad2/: Makefile  header.h  reader.c  runner.c  writer.c
lab09/zad1/: Makefile  finder.c
lab09/zad2a/: Makefile  main.c  zad2.raport
lab09/zad2b/: Makefile  main.c  zad2.raport
lab09/zad3a/: philosophers.c
lab09/zad3b/: Makefile  philosophers.c
lab10/zad1/: client.c  header.h  server.c
lab10/zad2/: Makefile  client.c  header.h  server.c
